logs/shockcalendar.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ShockCalendar'...
Compiling './lib/python3.5/site-packages/ShockCalendar/ShockCalendar.py'...
***   File "./lib/python3.5/site-packages/ShockCalendar/ShockCalendar.py", line 297
    raise ValueError, "no se uso el parametro day"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ShockCalendar/test.py'...
***   File "./lib/python3.5/site-packages/ShockCalendar/test.py", line 50
    print "callback clic " + str(self.calendar.GetSelectDay());
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ShockCalendar/test2.py'...
***   File "./lib/python3.5/site-packages/ShockCalendar/test2.py", line 64
    print "callback clic: " + str(self.calendar.GetSelectDay());
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ShockCalendar-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
